# mume-warlords

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements-poetry.txt  requirements.txt  warlords.json  warlords.py
.github/workflows/: generate.yml  main.yml
src/warlords/: __init__.py  main.py  warlords.json.schema  warlords_v1.json.schema
tests/: __init__.py  test_warlords.py
tests/examples/: output.json  response.html
